tests/success/add.avm
; test add
push int8(0)
push float(42.42)
hdump
add
hdump
assert float(42.42)
push int8(-1)
add
hdump
assert float(41.42)
pop
exit
